Update engine/src/main/java/com/arcadedb/query/sql/executor/SelectExecutionPlanner.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>